--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
       <span class="expandButton"></span>
     </div>
   </div>
+  <section class="form">
+    <form>
+      <label for="title">Title<br><input type="text"></label>
+      <label for="content"><br>Content<br><textarea rows=4></textarea></label><br>
+      <button>Add Content</button>
+    </form>
+  </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 </body>
 
